--- a/test/next-nodejs-auth/frontend/styles/Index.module.css
+++ b/test/next-nodejs-auth/frontend/styles/Index.module.css
@@ -6,7 +6,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: antiquewhite;
+    background-image: url(../img/homep1.jpg);
+
+    
 }
 
 .title {
@@ -16,6 +18,7 @@
     padding-bottom: 40px;
     font-weight: bold;
     color: green;
+    
 }
 
 .list {
