--- a/test/next-nodejs-auth/frontend/styles/Index.module.css
+++ b/test/next-nodejs-auth/frontend/styles/Index.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(../img/homep1.jpg);
+    background-image: url(../img/homepage.jpg);
 
     
 }
