--- a/test/next-nodejs-auth/frontend/styles/Index.module.css
+++ b/test/next-nodejs-auth/frontend/styles/Index.module.css
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     background-image: url(../img/homepage.jpg);
+    color: rgb(248, 247, 242);
+    font-size: 30px;
 
     
 }
