ทำหน้าสมัครadmin

--- a/frontend/styles/Index.module.css
+++ b/frontend/styles/Index.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(../img/homepage.jpg);
+    background-image: url(../img/home11.png);
     color: rgb(248, 247, 242);
     font-size: 30px;
 
