--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -5,9 +5,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(../img/backgroud.jpg );
 
-  font-size: 30px;
-  color: rgb(235, 230, 230);
+  font-size: 28px;
+  color: rgb(173, 8, 22);
 }
 
 .content {
@@ -21,14 +22,14 @@
 }
 
 .gridContainer > div {
-  background-color: pink;
+  background-color: rgb(43, 30, 158);
   text-align: left;
   padding: 10px 0;
   font-size: 1.2rem;
 }
 
 .gridContainer > div > input {
-  width: 100%;
+  width: 90%;
   padding: 2px 2px;
   margin: 0px 0;
   box-sizing: border-box;
@@ -47,7 +48,7 @@
   color: aliceblue;
 }
 .text {
-  color: blue;
+  color: rgb(212, 13, 63);
 }
 .btn {
   background-color: green;
@@ -96,7 +97,7 @@
   color: whitesmoke;
   font-size: 1rem;
   margin-top: 10px;
-  border: 2px solid brown;
+  border: 2px solid rgb(76, 41, 172);
 }
 .btn1:hover {
   background-color: red;
@@ -120,8 +121,8 @@
 }
 
 .btn2 {
-  background-color: rgb(34, 183, 233);
-  color: whitesmoke;
+  background-color: rgb(223, 29, 71);
+  color: rgb(75, 56, 56);
   font-size: 1rem;
   margin-top: 10px;
   border: 2px solid rgb(34, 183, 233);
@@ -137,4 +138,11 @@
     background-color: red;
     height:  100%;
 }
+.bk {
+  
+  background-image: url(../img/backgroud.jpg );
+  height: 100vh;
+
+}
+
 
